--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,6 +3,6 @@
   "rules": {
     "@next/next/no-img-element": "off",
     "react/no-unescaped-entities": "off",
-    "react/no-unknown-property": "off",
+    "react/no-unknown-property": "off"
   }
 }
