--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "react-toggle": "^4.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
